<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_tip">Amazing (20%)</string>
    <string name="good_tip">Good (18%)</string>
    <string name="okay_tip">Okay (15%)</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>