<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ic_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        app:layout_constraintStart_toEndOf="@id/ic_store"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtServiceCost"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="?attr/editTextBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textHowTheService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_store"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/how_was_the_service"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutInput" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/textHowTheService"
        app:layout_constraintTop_toBottomOf="@id/textHowTheService">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioAmazingTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_tip"
            android:textSize="14sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioGoodTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_tip"
            android:textSize="14sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioOkayTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_tip"
            android:textSize="14sp" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textRoundUpTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_store"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/round_up_tip"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOptions" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/checkRoundTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textRoundUpTip"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRoundUpTip" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/tip_amount"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>